--- a/app/src/pages/admin/view/galery.html
+++ b/app/src/pages/admin/view/galery.html
@@ -1,9 +1,10 @@
-<md-text-float>Images gallery</md-text-float>
-<div layout="row" layout-padding layout-fill layout-wrap>
-    <md-whiteframe class="md-whiteframe-z2" flex-sm="45" flex-gt-sm="35" flex-gt-md="25" layout-align="center center" ng-repeat="image in images" layout="column" layout-padding layout-margin>
-        <img ng-src="{{image}}" placeholder="demo_image" style="height:300px; width: 300px"/>
-        <md-button class="md-fab md-warn md-raised" ng-click="delete($event, image)"><i class="material-icons">clear</i></md-button>
-        </span>
-    </md-whiteframe>
-</div>
+<md-content flex layout="column" layout-align="center center">
+    <md-toolbar class="md-toolbar-tools" flex><md-text-float><h2>Images gallery</h2></md-text-float></md-toolbar>
+    <div layout="row" layout-padding layout-fill layout-wrap layout-align="center space">
+        <md-whiteframe class="md-whiteframe-z2" flex-sm="45" flex-gt-sm="35" flex-gt-md="20" layout-align="center center" ng-repeat="image in images" layout="column" layout-padding layout-margin>
+            <img lazy-load ng-src="{{image}}" placeholder="demo_image" style="height:300px; width: 300px"/>
+            <md-button class="md-fab md-warn md-raised" ng-click="delete($event, image, $index)"><i class="material-icons">clear</i></md-button>
+        </md-whiteframe>
+    </div>
+</md-content>
 
