--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -201,3 +201,15 @@ span.name {
   font-size:1.1em;
   padding-left:5px;
 }
+.image {
+  transition: 2s linear all;
+  -webkit-transition: 1s linear all;
+}
+
+.invisible {
+  opacity: 0;
+}
+
+.visible {
+  opacity: 1;
+}
