--- a/app/src/pages/admin/view/galery.html
+++ b/app/src/pages/admin/view/galery.html
@@ -1,9 +1,35 @@
 <md-content flex layout="column" layout-align="center center">
-    <md-toolbar class="md-toolbar-tools" flex><md-text-float><h2>Images gallery</h2></md-text-float></md-toolbar>
+    <div layout-padding>
+        <label>Select filter criteria</label>
+        <md-input-container flex>
+            <label>Search by points</label>
+            <input type="text" ng-model="searchPoints" ng-disabled="disableSe"/>
+        </md-input-container>
+
+        <md-input-container flex>
+            <md-checkbox ng-model="checked" ng-click="oneAndMore()" class="md-primary"></md-checkbox>
+        </md-input-container>
+
+            <!--<select ng-model="selectedValue" ng-change="selectFilter(selectedValue)">-->
+                    <!--<option ng-value="-2"><em>Reset</em></option>-->
+                    <!--<option ng-value = "-1"><em>One or more</em></option>-->
+                    <!--<option ng-repeat="filter in pointsFilter" ng-value="filter">-->
+                        <!--{{filter}}-->
+                    <!--</option>-->
+            <!--</select>-->
+    </div>
     <div layout="row" layout-padding layout-fill layout-wrap layout-align="center space">
-        <md-whiteframe class="md-whiteframe-z2" flex-sm="45" flex-gt-sm="35" flex-gt-md="20" layout-align="center center" ng-repeat="image in images" layout="column" layout-padding layout-margin>
-            <img lazy-load ng-src="{{image}}" placeholder="demo_image" style="height:300px; width: 300px"/>
-            <md-button class="md-fab md-warn md-raised" ng-click="delete($event, image, $index)"><i class="material-icons">clear</i></md-button>
+        <md-whiteframe ng-repeat="image in images | filter: searchPoints" class="md-whiteframe-z2 image" flex-sm="45" flex-gt-sm="35"
+                       flex-gt-md="20" layout-align="center center" layout="column" layout-padding layout-margin layout-wrap>
+            <img lazy-load ng-if="image.archive===''" source="image.folder" index="{{$index}}" placeholder="demo_image"
+                 style="height:300px; width: 300px"/>
+            <img lazy-load ng-if="image.archive!==''" source="image.archive" index="{{$index}}" placeholder="demo_image"
+                 style="height:300px; width: 300px"/>
+            <md-button ng-disabled="image.archive!==''" class="md-fab md-warn md-raised"
+                       ng-click="delete($event, image, $index)"><i class="material-icons">clear</i></md-button>
+            <span ng-if="image.archive===''"><b>Subfolder:</b> {{image.folder}}</span>
+            <span ng-if="image.archive!==''"><b>Archive:</b> {{image.archive}}</span>
+            <span>Points: {{image.points}}</span>
         </md-whiteframe>
     </div>
 </md-content>
