--- a/app/src/pages/admin/view/galery.html
+++ b/app/src/pages/admin/view/galery.html
@@ -1,4 +1,4 @@
-<md-content flex layout="column" layout-align="center center">
+<md-content flex layout="column" layout-align="center center" id="toast-container">
     <div layout-padding>
         <label>Select filter criteria</label>
         <md-input-container flex>
@@ -7,7 +7,7 @@
         </md-input-container>
 
         <md-input-container flex>
-            <md-checkbox ng-model="checked" ng-click="oneAndMore()" class="md-primary"></md-checkbox>
+            <md-checkbox ng-model="checked" ng-click="oneAndMore()" class="md-primary" aria-label="checkbox"></md-checkbox>
         </md-input-container>
 
             <!--<select ng-model="selectedValue" ng-change="selectFilter(selectedValue)">-->
@@ -19,12 +19,15 @@
             <!--</select>-->
     </div>
     <div layout="row" layout-padding layout-fill layout-wrap layout-align="center space">
-        <md-whiteframe ng-repeat="image in images | filter: searchPoints" class="md-whiteframe-z2 image" flex-sm="45" flex-gt-sm="35"
+        <md-whiteframe ng-repeat="image in images | filter: searchPoints" class="md-whiteframe-z2 image" flex-sm="45" flex-gt-sm="30"
                        flex-gt-md="20" layout-align="center center" layout="column" layout-padding layout-margin layout-wrap>
+
             <img lazy-load ng-if="image.archive===''" source="image.folder" index="{{$index}}" placeholder="demo_image"
                  style="height:300px; width: 300px"/>
+
             <img lazy-load ng-if="image.archive!==''" source="image.archive" index="{{$index}}" placeholder="demo_image"
                  style="height:300px; width: 300px"/>
+
             <md-button ng-disabled="image.archive!==''" class="md-fab md-warn md-raised"
                        ng-click="delete($event, image, $index)"><i class="material-icons">clear</i></md-button>
             <span ng-if="image.archive===''"><b>Subfolder:</b> {{image.folder}}</span>
