--- a/app/src/pages/admin/view/galery.html
+++ b/app/src/pages/admin/view/galery.html
@@ -3,7 +3,7 @@
         <label>Select filter criteria</label>
         <md-input-container flex>
             <label>Search by points</label>
-            <input type="text" ng-model="searchPoints" ng-disabled="disableSe"/>
+            <input type="text" ng-model="searchPoints"/>
         </md-input-container>
 
         <md-input-container flex>
@@ -19,7 +19,7 @@
             <!--</select>-->
     </div>
     <div layout="row" layout-padding layout-fill layout-wrap layout-align="center space">
-        <md-whiteframe ng-repeat="image in images | filter: searchPoints" class="md-whiteframe-z2 image" flex-sm="45" flex-gt-sm="30"
+        <md-whiteframe ng-repeat="image in images" class="md-whiteframe-z2 image" flex-sm="45" flex-gt-sm="30"
                        flex-gt-md="20" layout-align="center center" layout="column" layout-padding layout-margin layout-wrap>
 
             <img lazy-load ng-if="image.archive===''" source="image.folder" index="{{$index}}" placeholder="demo_image"
