--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -201,10 +201,10 @@ span.name {
   font-size:1.1em;
   padding-left:5px;
 }
-.image {
-  transition: 2s linear all;
-  -webkit-transition: 1s linear all;
-}
+
+/*.image {*/
+  /*-webkit-transition: 2s linear all;*/
+/*}*/
 
 .invisible {
   opacity: 0;
@@ -213,6 +213,7 @@ span.name {
 .visible {
   opacity: 1;
 }
+
 .md-dialog-container{
   position:fixed;
   top:0 !important;
@@ -222,5 +223,14 @@ span.name {
   position:fixed;
   top:0 !important;
   overflow:hidden;
+}
+
+md-whiteframe.ng-enter {
+  -webkit-transition: 1s ;
+  transition: 1s ;
+  opacity: 0 ;
+}
+md-whiteframe.ng-enter-active {
+  opacity: 1 ;
 }
 
