--- a/app/src/pages/admin/view/galery.html
+++ b/app/src/pages/admin/view/galery.html
@@ -1,31 +1,35 @@
 <md-content flex layout="column" layout-align="center center" id="toast-container">
+    <md-highlight-text>Admin gallery page</md-highlight-text>
     <div layout-padding>
-        <label>Select filter criteria</label>
-        <md-input-container flex>
-            <label>Search by points</label>
-            <input type="text" ng-model="searchPoints"/>
+        <md-input-container layout="row" layout-align="center center">
+            <md-select ng-model="selectedFilter" id="selectedFilter" ng-change="triggerSrc()"
+                       aria-label="Select points filter">
+                <md-optgroup>
+                    <md-option ng-value="-2" selected="true"><em>Filter by number of points</em></md-option>
+                    <md-option ng-value="-1"><em>One or more</em></md-option>
+                    <md-option ng-repeat="filter in pointsFilter | orderBy: filter" ng-value="filter" ng-if="filter==0">
+                        {{filter}} (Archived)
+                    </md-option>
+                    <md-option ng-repeat="filter in pointsFilter | orderBy: filter" ng-value="filter" ng-if="filter!=0">
+                        {{filter}}
+                    </md-option>
+                </md-optgroup>
+            </md-select>
         </md-input-container>
-
-        <md-input-container flex>
-            <md-checkbox ng-model="checked" ng-click="oneAndMore()" class="md-primary" aria-label="checkbox"></md-checkbox>
-        </md-input-container>
-
-            <!--<select ng-model="selectedValue" ng-change="selectFilter(selectedValue)">-->
-                    <!--<option ng-value="-2"><em>Reset</em></option>-->
-                    <!--<option ng-value = "-1"><em>One or more</em></option>-->
-                    <!--<option ng-repeat="filter in pointsFilter" ng-value="filter">-->
-                        <!--{{filter}}-->
-                    <!--</option>-->
-            <!--</select>-->
     </div>
     <div layout="row" layout-padding layout-fill layout-wrap layout-align="center space">
-        <md-whiteframe ng-repeat="image in images" class="md-whiteframe-z2 image" flex-sm="45" flex-gt-sm="30"
-                       flex-gt-md="20" layout-align="center center" layout="column" layout-padding layout-margin layout-wrap>
 
-            <img lazy-load ng-if="image.archive===''" source="image.folder" index="{{$index}}" placeholder="demo_image"
+        <md-whiteframe ng-repeat="image in images | pointsFilter: 500: selectedFilter track by image._id"
+                       class="md-whiteframe-z2" flex-sm="45" flex-gt-sm="30"
+                       flex-gt-md="20" layout-align="center center" layout="column" layout-padding layout-margin
+                       layout-wrap>
+
+            <img lazy-load threshold="100" ng-if="image.archive===''" source="image.folder" index="{{$index}}"
+                 placeholder="demo_image"
                  style="height:300px; width: 300px"/>
 
-            <img lazy-load ng-if="image.archive!==''" source="image.archive" index="{{$index}}" placeholder="demo_image"
+            <img lazy-load threshold="100" ng-if="image.archive!==''" source="image.archive" index="{{$index}}"
+                 placeholder="demo_image"
                  style="height:300px; width: 300px"/>
 
             <md-button ng-disabled="image.archive!==''" class="md-fab md-warn md-raised"
